# docker-haskell-helper

./: docker-compose.yml
src/stack/: Dockerfile
src/template/: stack.yaml  template.cabal
src/template/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/flag-cache/: template-0.1.0.0-d3eb9536f3d9c4ab4360fb76f4c87859
src/template/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/lib/x86_64-osx-ghc-7.10.3/template-0.1.0.0-AfZLceuzfU1JVqjEXm6xiy/: libHStemplate-0.1.0.0-AfZLceuzfU1JVqjEXm6xiy-ghc7.10.3.dylib
src/template/.stack-work/install/x86_64-osx/lts-5.6/7.10.3/pkgdb/: package.cache  template-0.1.0.0-d3eb9536f3d9c4ab4360fb76f4c87859.conf
