name:                template
version:             0.1.0.0
synopsis:            A template for build-cache warming
description:         A template for build-cache warming
homepage:            http://google.com
license:             BSD3
license-file:        LICENSE
author:              Lambda Jam
maintainer:          aztec.rex@jammm.com
copyright:           2016 CJ
category:            Meta
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


